<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:onClick="imageTapped"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo1"
                android:onClick="imageTapped"
                android:tag="0"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="16dp" />


            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo9"
                android:onClick="imageTapped"
                android:tag="1"
                app:srcCompat="@mipmap/ic_launcher" />


            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo8"
                android:onClick="imageTapped"
                android:tag="2"
                app:srcCompat="@mipmap/ic_launcher" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo7"
                android:onClick="imageTapped"
                android:tag="3"
                app:srcCompat="@mipmap/ic_launcher" />


            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo6"
                android:onClick="imageTapped"
                android:tag="4"
                app:srcCompat="@mipmap/ic_launcher" />


            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo5"
                android:onClick="imageTapped"
                android:tag="5"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo4"
                android:onClick="imageTapped"
                android:tag="6"
                app:srcCompat="@mipmap/ic_launcher" />


            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                android:onClick="imageTapped"
                android:tag="7"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="16dp" />


            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                android:onClick="imageTapped"
                android:tag="8"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="16dp" />


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:onClick="btnReset"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button" />

    <TextView
        android:id="@+id/lbl"
        android:layout_width="343dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/winner"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>